<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NormalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_text" />

    <Button
        android:id="@+id/back_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_to_main" />
    <Button
        android:id="@+id/all_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_be_dead"/>

</LinearLayout>