<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!--还不能用-->
    <EditText
        android:id="@+id/thread_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/inputWhatYouWant" />

    <Button
        android:id="@+id/thread_changeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thread_input_text"
        android:text="@string/change_toNiceToMeetYou" />

    <Button
        android:id="@+id/thread_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/hello_world"
        android:textSize="20sp" />
</RelativeLayout>